# econiches

./: README.md  pyproject.toml
models/ensemble/: config.yaml  run_ensemble.py
models/main/: config_lr.yaml  config_rf.yaml  main.py
src/econiches/: coverage.py  eda.py  parser.py  plot_fn.py  split.py  utils.py
src/econiches.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/econiches/modeling/: init.py  init_val.py  logger.py  paths.py  paths_val.py  pipeline_backend.py  preprocessing.py  run_pipeline.py
validation/logs/environment/lr/ko/: macro_metrics.csv  micro_metrics.csv  per_class_metrics.csv
validation/models/main/: main.py
