[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "econiches"
version = "0.1.0"
description = "Tools for microbial ecological niche prediction from functional genomic annotations"
requires-python = ">=3.14"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]